--- a/views/info.html
+++ b/views/info.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Info Page</title>
 </head>
 <body>
-
+    <h1>This is the info page</h1>
 </body>
 </html>
