--- a/views/info.html
+++ b/views/info.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Info Page</title>
+    <title>{{ @title }}</title>
 </head>
 <body>
-    <h1>This is the info page</h1>
+<!--
+    <h1>{{ @title }}</h1>
+    <p>{{ @username }} is logged in with {{ @password }}</p>
+-->
+    <h3>Temperature</h3>
+    <p>Fahrenheit is: {{ @ftemp }}</p>
+    <p>Celsius is: {{ (@ftemp-32) * (5.0/9.0) }}</p>
+    <p>I like {{ @color }}</p>
+    <p>The radius of the circle {{  3.14 * (2*@radius) }}</p>
+
 </body>
 </html>
